--- a/templates/sheet_editor.html
+++ b/templates/sheet_editor.html
@@ -207,11 +207,14 @@
 		const result = scoreView.getMusicXML();
 		result.done((xml) => {
 			if (xml) {
-				console.log(xml);
-				const content = prompt("Enter title for sheet:", "");
-				if (!content) {
-					alert("Name can't be empty.");
-					return;
+				let content = "";
+				const exist_id = sessionStorage.getItem("exist_id");
+				if (!exist_id) {
+					const content = prompt("Enter title for sheet:", "");
+					if (!content) {
+						alert("Name can't be empty.");
+						return;
+					}
 				}
 				
 				fetch('/save_musicxml', {
@@ -221,7 +224,8 @@
 					},
 					body: JSON.stringify({
 						musicxml: xml,
-						content: content.trim()
+						content: content.trim(),
+						item_id: exist_id
 					})
 				})
 					.then(res => res.json())
@@ -232,6 +236,8 @@
 						console.error('Lỗi khi gửi dữ liệu:', err);
 						alert('Gửi thất bại.');
 					});
+				
+				
 			} else {
 				console.warn("Không có dữ liệu MusicXML");
 			}
