--- a/templates/share_vocal.html
+++ b/templates/share_vocal.html
@@ -14,6 +14,11 @@
 	<link rel="stylesheet" href="/static/css/notes_genarate.css">
 	<link rel="icon" href="/static/logo/music_note_white.png">
 	<link rel="stylesheet" href="../static/css/bootstrap.css">
+	<style>
+		#gene{
+			background: url("/static/img/vlcsnap-2017-01-22-21h39m23s052.jpg") center/cover no-repeat !important;
+		}
+	</style>
 </head>
 <body>
 <div id="gene">
