--- a/static/css/pitch_detector.css
+++ b/static/css/pitch_detector.css
@@ -1,14 +1,14 @@
 
 * {
-  box-sizing: border-box;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+	box-sizing: border-box;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 html::-webkit-scrollbar, body::-webkit-scrollbar {
-  display: none;
+	display: none;
 }
 
 body {
@@ -181,4 +181,18 @@ canvas {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+}
+
+
+#three-canvas {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	width: 100vw;
+	height: 100vh;
+	pointer-events: none;
+	margin: 0;
+	border-radius: 0;
+	max-width: 100vw;
 }
